--- a/styles/dark.css
+++ b/styles/dark.css
@@ -5,8 +5,21 @@
 */
 
 :root.theme-dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #000028;
+  --text-color: #f1b2ce;
+  --heading-color: #db00ff;
+  --accent-color: #ff0070;
+  --title-decor-color: #000028;
+  --title-decor-bg: #ff0070;
+  --link-color: #f1b2ce;
+  --link-shadow-color: #ff0070;
+  --corner-color: #ff0070;
+  --rec-color: #ff0070;
+  --btn-color: #ff0070;
+  --btn-hover-border-color: rgba(255, 0, 112, 0.4);
+  --bg-image: url(../images/cover-image-dark.png);
+}
+
+:root.theme-dark .header__rec {
+  display: flex;
 }
