--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
   min-inline-size: 375px;
   max-inline-size: 1440px;
   margin: 0 auto;
+  overflow-x: clip;
 }
 
 h1,
@@ -33,6 +34,11 @@ picture {
   padding: 0;
 }
 
+img {
+  display: block;
+  max-inline-size: 100%;
+}
+
 button,
 a {
   color: currentColor;
@@ -40,3 +46,4 @@ a {
   font-size: inherit;
   line-height: inherit;
 }
+
