--- a/styles/light.css
+++ b/styles/light.css
@@ -5,8 +5,43 @@
 */
 
 :root.theme-light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --bg-color: #f5e1c8;
+  --text-color: #353430;
+  --heading-color: #ff0070;
+  --accent-color: #ff8dcb;
+  --title-decor-color: #353430;
+  --title-decor-bg: #ff8dcb;
+  --link-color: #353430;
+  --link-shadow-color: #ff8dcb;
+  --corner-color: #ff0070;
+  --rec-color: #ff0070;
+  --btn-color: #ff0070;
+  --btn-hover-border-color: rgba(255, 0, 112, 0.4);
+  --bg-image: url(../images/cover-image-light.png);
+}
+
+:root.theme-light .header__rec {
+  display: none;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --bg-color: #f5e1c8;
+    --text-color: #353430;
+    --heading-color: #ff0070;
+    --accent-color: #ff8dcb;
+    --title-decor-color: #353430;
+    --title-decor-bg: #ff8dcb;
+    --link-color: #353430;
+    --link-shadow-color: #ff8dcb;
+    --corner-color: #ff0070;
+    --rec-color: #ff0070;
+    --btn-color: #ff0070;
+    --btn-hover-border-color: rgba(255, 0, 112, 0.4);
+    --bg-image: url(../images/cover-image-light.png);
+  }
+
+  .header__rec {
+    display: none;
+  }
 }
