--- a/styles/style.css
+++ b/styles/style.css
@@ -127,8 +127,8 @@
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-weight: var(--title-font-weight);
   line-height: 0.825;
-  color: var(--heading-color);
-  text-shadow: 4px 4px 0 var(--accent-color);
+  color: var(--main-title-color);
+  text-shadow: var(--main-title-shadow);
 }
 
 .header__text {
@@ -232,8 +232,8 @@
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   font-weight: var(--title-font-weight);
   line-height: 0.825;
-  color: var(--heading-color);
-  text-shadow: 2px 2px 0 var(--accent-color);
+  color: var(--main-title-color);
+  text-shadow: var(--footer-title-shadow);
 }
 
 /* ==========================================================
