--- a/styles/style.css
+++ b/styles/style.css
@@ -296,23 +296,38 @@
 
   .section__gallery {
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: auto auto auto;
     gap: 20px;
   }
 
+  /* sunset: row 1, cols 1-2 */
   .section__gallery-image:nth-child(1) {
-    grid-column: span 2;
+    grid-column: 1 / 3;
+    grid-row: 1 / 2;
   }
 
+  /* ice-cream: rows 1-2, col 3 */
   .section__gallery-image:nth-child(2) {
-    grid-row: span 2;
+    grid-column: 3 / 4;
+    grid-row: 1 / 3;
   }
 
+  /* tape: rows 2-3, col 1 */
   .section__gallery-image:nth-child(3) {
-    grid-row: span 2;
+    grid-column: 1 / 2;
+    grid-row: 2 / 4;
   }
 
+  /* books: row 3, cols 2-3 */
+  .section__gallery-image:nth-child(4) {
+    grid-column: 2 / 4;
+    grid-row: 3 / 4;
+  }
+
+  /* street: row 2, col 2 */
   .section__gallery-image:nth-child(5) {
-    grid-column: span 2;
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
   }
 
   .footer__title {
