--- a/styles/light.css
+++ b/styles/light.css
@@ -7,7 +7,7 @@
 :root.theme-light {
   --bg-color: #fff1f7;
   --text-color: #353430;
-  --heading-color: #000e2e;
+  --heading-color: #353430;
   --accent-color: #ff8dcb;
   --title-decor-color: #353430;
   --title-decor-bg: #ff8dcb;
@@ -31,7 +31,7 @@
   :root {
     --bg-color: #fff1f7;
     --text-color: #353430;
-    --heading-color: #000e2e;
+    --heading-color: #353430;
     --accent-color: #ff8dcb;
     --title-decor-color: #353430;
     --title-decor-bg: #ff8dcb;
