--- a/styles/style.css
+++ b/styles/style.css
@@ -180,6 +180,7 @@
 }
 
 .card__text {
+  font-weight: var(--main-font-weight);
   line-height: 1.3;
 }
 
@@ -216,6 +217,7 @@
 }
 
 .section__gallery-image {
+  display: block;
   inline-size: 100%;
   object-fit: cover;
   object-position: center;
